--- a/index.html
+++ b/index.html
@@ -1,98 +1,97 @@
-<!DOCTYPE html>
-<html lang="en">
+<<!DOCTYPE html>
+<html lang="et">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV project</title>
+    <title>Anna Holostõhh - CV</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/2cd21c05f9.js" crossorigin="anonymous"></script>
+    
 </head>
+
 <body>
     <div class="container">
-<header>
-<h1> Anna Holostõhh-Tulevane spetsialist digimaailmas </h1>
-<div class="image container">
-    <div class="women image">
-        <img src="images/pexels-mareklevak-2265488.jpg" width="600" height="300" alt="women">
-    </div>
-</div>
-</header>
 
-<section class="main">
-<div class="description">
-  <h2 class="main-title">Lühitutvustus</h2>
-   <p class="description-text">Tulevane IT-spetsialist, kellel on huvi tarkvaraarenduse, disaini ja digilahenduste vastu. Otsin võimalusi, kus saaksin rakendada oma oskusi ja õppida juurde praktilises keskkonnas.</p> 
-</div>
-<div class="school">
-<h2 class="main-title">Haridus</h2>
-<ul class="school-list">
-<li> 2011-2023 Tallina Gümnaasium  </li>
-<li>2023-2027 Tallinna Tehnikakõrgkool</li>
-<li>2022 koolitus UX/UI Design  </li>
-<li>2024 projekt Nutika ajaplaneerimise rakendus</li>
+        <header>
+            <h1>Anna Holostõhh - tulevane spetsialist digimaailmas</h1>
 
-</ul>
-</div>
-<div class="work">
-<h2 class="main-title">Töökogemus</h2>
-<ul class="work-list">
-   <li>2024-2025
-Praktikant  IT-osakond XYZ </li> 
-</ul>
+            <div class="carousel">
+                <img id="carousel-img" src="images/pexels-mareklevak-2265488.jpg" alt="Anna tööl">
+            </div>
+        </header>
 
+        <main class="main">
+            <section class="description">
+                <h2 class="main-title">Lühitutvustus</h2>
+                <p class="description-text">
+                    Tulevane IT-spetsialist, kellel on huvi tarkvaraarenduse, disaini ja digilahenduste vastu. 
+                    Otsin võimalusi, kus saaksin rakendada oma oskusi ja õppida juurde praktilises keskkonnas.
+                </p>
+            </section>
 
-</div>
-<div class="qualification">
-<h2 class="main-title">Kvalifikatsioonid</h2>
-<ul class="qualification-list">
-    <li>Keeled: eesti (C1), inglise (C1), vene (emakeel)</li>
-    <li>Tarkvarad: Python, HTML/CSS, JavaScript, Figma, WordPress</li>
-    <li>Pehmed oskused: ajaplaneerimine, probleemide lahendamine, loovus</li>
-</ul>
+            <div class="row-sections">
+                <section class="school">
+                    <h2 class="main-title">Haridus</h2>
+                    <ul class="school-list">
+                        <li>2011-2023 Tallinna Gümnaasium</li>
+                        <li>2023-2027 Tallinna Tehnikakõrgkool</li>
+                        <li>2022 koolitus UX/UI Design</li>
+                        <li>2024 projekt Nutika ajaplaneerimise rakendus</li>
+                    </ul>
+                </section>
 
+                <section class="work">
+                    <h2 class="main-title">Töökogemus</h2>
+                    <ul class="work-list">
+                        <li>2024-2025 praktikant, IT-osakond XYZ</li>
+                    </ul>
+                </section>
+            </div>
 
+            <section class="qualification">
+                <h2 class="main-title">Kvalifikatsioonid</h2>
+                <ul class="qualification-list">
+                    <li>Keeled: eesti (C1), inglise (C1), vene (emakeel)</li>
+                    <li>Tarkvarad: Python, HTML/CSS, JavaScript, Figma, WordPress</li>
+                    <li>Pehmed oskused: ajaplaneerimine, probleemide lahendamine, loovus</li>
+                </ul>
+            </section>
 
+            <hr>
+        </main>
 
-</div>
+        <footer>
+            <section class="contact">
+                <h2 class="main-title">Kontaktandmed</h2>
+                <ul class="contact-list">
+                    <li>E-post: anna.näide@email.com</li>
+                    <li>Telefon: +372 512 3456</li>
+                </ul>
+            </section>
 
-<hr>
+            <section class="social-media">
+                <ul class="social-media-list">
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-phone"></i></a></li>
+                </ul>
+            </section>
 
-</section>
+            <section class="contact-links">
+                <ul class="contact-links-list">
+                    <li><a href="#">About me</a></li>
+                    <li><a href="#">Contact me</a></li>
+                    <li><a href="#">Terms of use</a></li>
+                </ul>
+            </section>
 
-<footer>
-<div class="contact">
-    <h2 class="main-title">Kontaktandmed</h2>
-<ul class="contact-list">
-    <li>E-post: anna.näide@email.com</li>
-    <li>Telefon: +372 512 3456</li>
-</ul>
+            <div class="copyright">
+                <span id="copyright">2025 &#169; Anna Holostõhh</span>
+            </div>
+        </footer>
 
-</div>
-
-<div class="social-media">
-<ul class="social-media-list">
-<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-<li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
-<li><a href="#"><i class="fa-solid fa-phone"></i></a></li>
-</ul>
-
-</div>
-<div class="contact-links">
-<ul class="contact-links-list">
-    <li><a href="#">About me</a></li>
-    <li><a href="#">Contact me</a></li>
-    <li><a href="#">Terms of use</a></li>
-</ul>
-
-</div>
-
-<div class="copyright">
-    <span id="copyright"> 2025 &#169;</span>
-</div>
-
-</footer>
     </div>
 
-    
+    <script src="script.js"></script>
 </body>
 </html>
